add liquidity shifting gif

--- a/docs/v2/overview.mdx
+++ b/docs/v2/overview.mdx
@@ -5,9 +5,15 @@ hide_table_of_contents: true
 sidebar_position: 1
 ---
 
+import LiquidityShifting from "./img/liquidity-shifting.gif";
+
 # Bunni v2 Overview
 
 Bunni v2 is a revolutionary Automated Market Maker (AMM) that introduces several groundbreaking features to optimize liquidity provision and maximize profits for liquidity providers (LPs). Building upon the concept of ticks from Uniswap v3, Bunni v2 introduces a new paradigm in decentralized exchange technology.
+
+<div style={{ textAlign: "center" }}>
+  <img src={LiquidityShifting} />
+</div>
 
 ## Key Features
 
